--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
+    "helmet": "^7.1.0",
     "joi": "^17.13.3",
     "uuid": "^10.0.0"
   },
